--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.23.0",
+    "@azure/msal-react": "^1.3.2",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "@vaadin/vaadin": "^23.2.5",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
     "react-dom": "18.0.0",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native": "0.69.6",
+    "react-native-paper": "^5.0.0-rc.6",
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
