--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-paper": "^5.0.0-rc.8",
     "react-native-web": "~0.18.7",
     "typescript": "^4.6.3"
   },
