--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "GAC_Devs",
-    "slug": "gacprojectPopUp",
+    "name": "yannick0430",
+    "slug": "gacproject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
