--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react-native": "~0.69.1",
     "@vaadin/vaadin": "^23.2.5",
     "expo": "~46.0.16",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
+    "expo-notifications": "^0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "react": "18.0.0",
@@ -26,6 +28,7 @@
     "react-native": "0.69.6",
     "react-native-msal": "^4.0.4",
     "react-native-paper": "^5.0.0-rc.6",
+    "react-native-push-notification": "^8.1.1",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
     "typescript": "^4.6.3"
