--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-notifications": "^0.16.1",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "react": "18.0.0",
