authentication with Azure done, linking warning to be fixed, storage of accesstoken to be fixed, logout still needs to be done, secure endpoints)

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "GAC_Devs",
+    "scheme" : "sem7-repo",
     "slug": "gacprojectPopUp",
     "version": "1.0.0",
     "orientation": "portrait",
