--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-app-auth": "^6.4.3",
     "react-native-msal": "^4.0.4",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-auth-session": "3.7.1",
+    "expo-random": "~12.3.0",
+    "expo-secure-store": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
