--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "GAC_Devs",
-    "scheme" : "sem7-repo",
-    "slug": "gacprojectPopUp",
+    "scheme": "gacprjscheme",
+    "slug": "gacproject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
