--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-linking": "~3.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
