--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "GAC_Devs",
+    "name": "yannick0430",
     "scheme": "gacprjscheme",
     "slug": "gacproject",
     "version": "1.0.0",
