--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "sem7-repo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,7 +18,7 @@
     "@types/react-native": "~0.69.1",
     "@vaadin/vaadin": "^23.2.5",
     "axios": "^1.1.3",
-    "expo": "~46.0.16",
+    "expo": "~46.0.17",
     "expo-auth-session": "3.7.1",
     "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
@@ -42,7 +41,9 @@
     "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "react-native-pager-view": "5.4.24",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
