--- a/app.json
+++ b/app.json
@@ -19,18 +19,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.yannick0430.gacproject",
-      "buildNumber": "1.0.0"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.yannick0430.gacproject",
-      "versionCode": 1
-      
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
