--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
     "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
     "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
+    "ionicons": "^6.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-animatable": "^1.3.3",
     "react-native-app-auth": "^6.4.3",
     "react-native-collapsible": "^1.6.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-msal": "^4.0.4",
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3",
-    "expo-splash-screen": "~0.16.2"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
