--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
     "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "react": "18.0.0",
@@ -40,10 +41,10 @@
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-tab-view": "^3.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3",
-    "expo-splash-screen": "~0.16.2"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
