--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
     "react-native-msal": "^4.0.4",
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^5.0.0-rc.6",
+    "react-native-svg": "^13.6.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
