android crash fix

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@vaadin/vaadin": "^23.2.5",
     "axios": "^1.1.3",
     "expo": "~46.0.17",
-    "expo-auth-session": "3.7.1",
+    "expo-auth-session": "~3.7.4",
     "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
-    "expo-linking": "~3.2.2",
+    "expo-linking": "~3.2.4",
     "expo-notifications": "^0.16.1",
     "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
@@ -44,7 +44,7 @@
     "react-native-msal": "^4.0.4",
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^5.0.0-rc.6",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
