--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.13",
@@ -28,6 +29,7 @@
     "expo-permissions": "~13.2.0",
     "expo-random": "~12.3.0",
     "expo-secure-store": "~11.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
     "react": "18.0.0",
@@ -42,11 +44,11 @@
     "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
-    "typescript": "^4.6.3",
-    "expo-splash-screen": "~0.16.2"
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "jest": "^29.3.1"
   },
   "private": true
 }
