--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.13",
@@ -46,6 +46,7 @@
     "react-native-pager-view": "5.4.24",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
