--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-tab-view": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-web": "~0.18.7",
+    "react-query": "^3.39.2",
     "sharp-cli": "^3.0.0",
     "typescript": "^4.6.3"
   },
