--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-toast-message": "^2.1.5",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "sharp-cli": "^3.0.0",
     "typescript": "^4.6.3"
