--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
+    "gradle": "^1.2.4",
     "ionicons": "^6.0.4",
     "react": "18.0.0",
     "react-content-loader": "^6.2.0",
