--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-updates": "~0.14.7",
     "gradle": "^1.2.4",
     "ionicons": "^6.0.4",
+    "lodash": "^4.17.21",
     "react": "18.0.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.0.0",
