--- a/app.json
+++ b/app.json
@@ -5,7 +5,10 @@
     "slug": "gacproject",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
+    "notification":{
+      "icon":"./assets/logo.png"
+    },
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
