--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "expo": "~46.0.17",
     "expo-auth-session": "~3.7.4",
+    "expo-constants": "~13.2.4",
     "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.4",
@@ -32,6 +33,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.7",
+    "fontloader": "^1.2.7",
     "gradle": "^1.2.4",
     "ionicons": "^6.0.4",
     "lodash": "^4.17.21",
