--- a/app.json
+++ b/app.json
@@ -6,8 +6,8 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
-    "notification":{
-      "icon":"./assets/logo.png"
+    "notification": {
+      "icon": "./assets/logo.png"
     },
     "userInterfaceStyle": "light",
     "splash": {
@@ -22,7 +22,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yannick0430.gacproject"
     },
     "android": {
       "adaptiveIcon": {
